Fix some layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,6 +67,7 @@ section div ul li{
   margin-left: 8;
   padding: 5px;
   background-color: red;
+  color: white;
 }
 
 @media print {
@@ -77,7 +78,6 @@ section div ul li{
 
   .header {
     display: block; 
-    margin-top: -40px;
     margin-bottom: 15px;
     text-align: center;
     padding: 5px;
@@ -87,12 +87,6 @@ section div ul li{
 
   .header h1{
     font-weight: bold;
-  }
-
-  .header h2 {
-    display: none;
-    margin: 0;
-    padding: 0;
   }
 
   section h2 {
